--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.react-datepicker-wrapper{
+    display: block !important;
+}
+
+.react-datepicker__triangle{
+    display:none !important;
+}
