--- a/app/globals.css
+++ b/app/globals.css
@@ -10,3 +10,31 @@
 .react-datepicker__triangle{
     display:none !important;
 }
+
+/* top default */
+.tooltip {
+    position: relative;
+}
+.tooltip .top_default {
+    min-width: 10px;
+    bottom: -8px;
+    left: 50%;
+    transform: translate(-50%, 100%);
+    padding: 8px 8px;
+    color: #fff;
+    background-color: #34d399;
+    font-weight: normal;
+    font-size: 13px;
+    border-radius: 8px;
+    position: absolute;
+    z-index: 99999;
+    box-sizing: border-box;
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.174);
+    display: none;
+    text-align: left;
+}
+
+
+.tooltip:hover .top_default {
+    display: block;
+}
